--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@types/react-redux": "^7.1.33",
     "next": "14.2.5",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-redux": "^9.1.2",
-    "recharts": "^2.12.7"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
